# SzpekESP32

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  partitions.csv  sdkconfig
.github/workflows/: main.yml
components/BME280_driver/: CMakeLists.txt
components/cJSONExt/: CMakeLists.txt  cJSONExt.c  cJSONExt.h
components/pmsX003_driver/: CMakeLists.txt  pmsX003.c  pmsX003.h
components/pms_driver/: CMakeLists.txt  pms_driver.c  pms_driver.h
components/url_encoding/: CMakeLists.txt  url_encoding.c  url_encoding.h
main/: CMakeLists.txt  app.c  app.h  captdns.c  configServer.c  configServer.h  crypto.c  crypto.h  logUtils.c  logUtils.h  main.c  mathUtils.h  network.c  network.h  reports.h  settings.c  settings.h  smog.c  smog.h  szpekApi.c  szpekApi.h  timeTriggers.c  timeTriggers.h  weather.c  weather.h
main/data/configServer/: config.html  index.html
main/szpekApi/legacy/: szpekApiLegacy.c  szpekApiLegacy.h
main/szpekApi/v1/: szpekApiV1.c  szpekApiV1.h
main/tasks/: taskAggregateData.c  taskAggregateData.h  taskCheckButton.c  taskCheckButton.h  taskFirmwareOTA.c  taskFirmwareOTA.h  taskLogs.c  taskLogs.h  taskPushReports.c  taskPushReports.h  taskSmogSensor.c  taskSmogSensor.h  taskWeatherSensor.c  taskWeatherSensor.h  tasks.h
main/timers/: timerTimeTriggers.c  timerTimeTriggers.h  timers.h
releases/: changelog.txt
tools/: flash_szpekid.bat  szymon_esp32_test.szpekid.json
tools/mass_config/: flash_szpekid_nvs.bat  generate_szpekid_nvs.bat  szpekid_config.csv  szpekid_example.csv
