idf_component_register(SRCS "main.c"
							"network.c"
							"app.c"
							"tasks/taskSmogSensor.c"
							"tasks/taskPushReports.c"
							"tasks/taskAggregateData.c"
							"tasks/taskCheckButton.c"
							"timers/timerTimeTriggers.c"
							"smog.c"
							"crypto.c"
							"settings.c"
							"szpekApi.c"
							"configServer.c"
							"timeTriggers.c"
                    INCLUDE_DIRS "."
                    )